[gd_scene load_steps=19 format=3 uid="uid://8sg37qut2lmd"]

[ext_resource type="Script" path="res://scripts/entities/redBoss.gd" id="1_6k66t"]
[ext_resource type="Resource" path="res://dialogues/abilityTuto/redBossAbility.dtl" id="2_6a3et"]
[ext_resource type="Material" uid="uid://bpcv64mwqo3hs" path="res://materials/entities/M_RedBoss.tres" id="7_hlol5"]
[ext_resource type="Texture2D" uid="uid://rdpqmlr087bk" path="res://textures/enemies/T_Boss.tres" id="8_irt40"]
[ext_resource type="Script" path="res://scripts/skills/charging.gd" id="8_tqa7i"]
[ext_resource type="Script" path="res://scripts/skills/growPikes.gd" id="9_vy62b"]
[ext_resource type="PackedScene" uid="uid://dhpe10uow08f2" path="res://gameplayObjects/enemies/red/spikeEnemy.tscn" id="10_1nb10"]
[ext_resource type="Script" path="res://scripts/skills/bossSpawnEnemies.gd" id="11_rk1qb"]
[ext_resource type="PackedScene" uid="uid://m65bkbdw7rco" path="res://gameplayObjects/enemies/red/rotatingTriangleEnemy.tscn" id="12_3sf5l"]
[ext_resource type="PackedScene" uid="uid://b65e1yxusumbp" path="res://prefabs/particles/spikeSpawnParticles.tscn" id="12_syl6e"]
[ext_resource type="Script" path="res://scripts/health.gd" id="13_prp1y"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="14_lenv0"]
[ext_resource type="Script" path="res://scripts/glowOnHit.gd" id="15_xayuu"]
[ext_resource type="Script" path="res://scripts/damageArea.gd" id="17_hxakx"]
[ext_resource type="Script" path="res://scripts/DetectionRange.gd" id="19_kwsfx"]

[sub_resource type="QuadMesh" id="QuadMesh_qqx0d"]
size = Vector2(500, 500)

[sub_resource type="CircleShape2D" id="CircleShape2D_4beew"]
radius = 1500.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rmcg2"]
bg_color = Color(0.690196, 0, 0.0745098, 1)

[node name="RedBoss" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_6k66t")
endDialogue = ExtResource("2_6a3et")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 50.0
target_desired_distance = 100.0

[node name="MeshInstance2D3" type="MeshInstance2D" parent="."]
material = ExtResource("7_hlol5")
mesh = SubResource("QuadMesh_qqx0d")
texture = ExtResource("8_irt40")

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(0, -224, 194, 111, -194, 111)

[node name="Charging" type="Node" parent="."]
script = ExtResource("8_tqa7i")
rotationSpeed = 5.0
preChargeSpeed = 2500.0

[node name="GrowSpikes" type="Node" parent="."]
script = ExtResource("9_vy62b")
spikePrefab = ExtResource("10_1nb10")
particlesPrefab = ExtResource("12_syl6e")
nbEnemies = 10
removeRandomSpike = false

[node name="BossSpawnEnemies" type="Node" parent="."]
script = ExtResource("11_rk1qb")
enemyPrefab = ExtResource("12_3sf5l")

[node name="ChargingBerserk" type="Node" parent="."]
script = ExtResource("8_tqa7i")
rotationSpeed = 8.0
preChargeSpeed = 3500.0

[node name="GrowSpikesBerserk" type="Node" parent="."]
script = ExtResource("9_vy62b")
spikePrefab = ExtResource("10_1nb10")
particlesPrefab = ExtResource("12_syl6e")

[node name="BossSpawnEnemiesBerserk" type="Node" parent="."]
script = ExtResource("11_rk1qb")
enemyPrefab = ExtResource("12_3sf5l")

[node name="Health" type="Node" parent="."]
script = ExtResource("13_prp1y")
life = 1.0
maxLife = 120.0

[node name="GlowOnHit" type="Node" parent="Health"]
script = ExtResource("15_xayuu")

[node name="Enemy" type="Node" parent="."]
script = ExtResource("14_lenv0")

[node name="DamageArea" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 8
script = ExtResource("17_hxakx")
dmg = 0.5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DamageArea"]
polygon = PackedVector2Array(0, -224, 194, 111, -194, 111)

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8
script = ExtResource("19_kwsfx")
shouldNotifyOut = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_4beew")
debug_color = Color(0.678431, 0.0980392, 0, 0.0862745)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]Spikes Lord[/center]"
fit_content = true

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_rmcg2")
value = 100.0
show_percentage = false

[connection signal="area_entered" from="DamageArea" to="DamageArea" method="_on_area_entered"]
[connection signal="body_entered" from="DamageArea" to="DamageArea" method="_on_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="DetectionArea" method="_on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="DetectionArea" method="_on_body_exited"]
